# stem-tutor-agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_ASYNC.md  LICENSE  README.md  README.zh-CN.md  api.py  export_review_data.py  key.env.example  poll_batch.py  poll_db.py  pyproject.toml  start.bat  submit_simple.py  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
baseline_comparison/: README.md  agent_eval_data.json  baseline_eval_data.json  comparison_results.json  compute_comparison.py
cli/: evaluate.py  main.py
fixtures/: eval_cases.json  planted_errors.json  sample_case.json
scripts/: migrate_to_db.py
stem_tutor/: __init__.py  settings.py  sympy_verify.py
stem_tutor/domain/: __init__.py  models.py
stem_tutor/evaluation/: __init__.py  baseline.py  (+8 more)
tests/: test_admin_e2e.py  test_admin_user_detail.py  test_approval.py  test_auth.py  test_batch.py  test_convert_testdata.py  test_database.py  test_error_type_mapping.py  test_eval_batch_results.py  test_evaluation_runner.py  test_global_budget.py  test_graph_integration.py  test_json_schema_enforcement.py  test_model_group_config.py  test_ocr_input_flow.py  test_parser.py  test_python_executable.py  test_reference_generation_failure_modes.py  test_reference_retry_with_hints.py  test_report_streaming.py  test_reverify_step.py  test_review_problems_topic.py  test_routing.py  test_run_meta_and_provider_info.py  test_sympy_integration.py  test_sympy_verify.py  test_user_safe_status.py  test_v1_feedback_review_fallbacks.py  test_v1_structured_fallbacks.py  test_verify_degrade_policy.py  test_verify_fallback_chain.py  test_verify_retry_fallback.py
web/: app.py  auth.py  batch_worker.py  database.py  models.py  service.py
(+49 files in other folders)
