[project]
name = "stem_tutor"
version = "0.1.0"
description = "LangGraph-based multi-subject STEM tutoring prototype"
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = "AGPL-3.0-only"
dependencies = [
  "pydantic>=2.7.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-core>=1.2.0",
  "typing-extensions>=4.9.0",
  "requests>=2.31.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",
  "sympy>=1.12",
  "numpy>=1.24",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "aiosqlite>=0.20.0",
  "bcrypt>=4.1.0",
  "python-dotenv>=1.0.0",
  "python-jose[cryptography]>=3.3.0",
  "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.0",
  "nest-asyncio>=1.6.0",
  "playwright>=1.59.0",
]

[tool.setuptools.packages.find]
include = ["stem_tutor*", "web*", "cli*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.vercel]
entrypoint = "api:app"
